--- a/public/index.html
+++ b/public/index.html
@@ -20,36 +20,33 @@
 
 <body>
   <!-- Responsive navbar-->
+  <!-- Responsive navbar-->
   <nav class="navbar navbar-expand-lg fixed-top navbar-light">
     <a class="navbar-brand" href="#">
-      <img src="../logos/2.png" alt="SpaceApps" />
+        <img src="../logos/2.png" alt="SpaceApps" />
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mx-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="./index.html">Inicio</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="./reporte.html">Reporte</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./recomendaciones.html">Recomendaciones</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Acerca de</a>
-        </li>
-        <a class="navbar-brand1" href="#">
-          <img src="../logos/2.png" alt="SpaceApps" />
-        </a>
-      </ul>
+        <ul class="navbar-nav mx-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="./index.html">Inicio</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="./reporte.html">Reporte</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./recomendaciones.html">Recomendaciones</a>
+            </li>
+            <a class="navbar-brand1" href="#">
+                <img src="../logos/2.png" alt="SpaceApps" />
+            </a>
+        </ul>
     </div>
-
-  </nav>
+</nav>
 
   <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
