--- a/public/recomendaciones.html
+++ b/public/recomendaciones.html
@@ -36,15 +36,11 @@
                 <li class="nav-item">
                     <a class="nav-link" href="./recomendaciones.html">Recomendaciones</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Acerca de</a>
-                </li>
                 <a class="navbar-brand1" href="#">
                     <img src="../logos/2.png" alt="SpaceApps" />
                 </a>
             </ul>
         </div>
-
     </nav>
 
 
@@ -61,10 +57,6 @@
                             locales (planificadores urbanos, autoridades de la ciudad) desarrollen planes urbanos más
                             sostenibles
                         </p>
-                        <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
-                            <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features">Services</a>
-                            <a class="btn btn-outline-light btn-lg px-4" href="#report">Make a report</a>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -95,17 +87,15 @@
 
 
             <h2>Sobre este proyecto</h2>
-            <p class="lead">This is a great place to talk about your webpage.
-                This template is purposefully unstyled so you can use it as a
-                boilerplate or starting point for you own landing page designs! This template features:
+            <p class="lead">
+                Aqua Decisions es una página web que a través de un mapa interactivo muestra recomendaciones y
+                tendencias de áreas geográficas aptas para incorporar nuevos equipamientos urbanos de captación de agua
+                pluvial para abastecer a localidades rurales de difícil acceso, ayudando a agilizar el proceso de
+                planeación territorial a diferentes escalas y con un enfoque sostenible e inclusivo que reduce costos de
+                inversión gubernamental y asegura el acceso al agua potable mitigando el impacto ambiental al ser
+                instalaciones poco invasivas. Además, ayuda a democratizar la información mediante el apartado de
+                reportes que los ciudadanos pueden usar cuando se presenta un problema en el servicio agua potable.
             </p>
-            <ul>
-                <li>Clickable nav links that smooth scroll to page sections</li>
-                <li>Responsive behavior when clicking nav links perfect for a one page website</li>
-                <li>Bootstrap's scrollspy feature which highlights which section of the page you're on in the navbar
-                </li>
-                <li>Minimal custom CSS so you are free to explore your own unique design options</li>
-            </ul>
         </div>
         </div>
         </div>
@@ -130,8 +120,10 @@
                         <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i
                                 class="bi bi-collection"></i></div>
                         <h2 class="h4 fw-bolder">Sustentabilidad</h2>
-                        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another
-                            sentence and probably just keep going until we run out of words.</p>
+                        <p>Nuestro proyecto consiste en una herramienta que permita facilitar el desarrollo sustentable
+                            de las
+                            ciudades. Esto a través de un modelo de predicción que utiliza Machine Learning.
+                        </p>
                         <a class="text-decoration-none" href="#!">
                             Call to action
                             <i class="bi bi-arrow-right"></i>
@@ -142,8 +134,10 @@
                         <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i
                                 class="bi bi-building"></i></div>
                         <h2 class="h4 fw-bolder">Sostenibilidad</h2>
-                        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another
-                            sentence and probably just keep going until we run out of words.</p>
+                        <p>Buscamos que nuestra solución se utilice para el desarrollo de ciudades que
+                            se mantengan productivas con el transcurso del tiempo, con el fin de mejorar la
+                            calidad de vida de los habitantes.
+                        </p>
                         <a class="text-decoration-none" href="#!">
                             Call to action
                             <i class="bi bi-arrow-right"></i>
@@ -154,8 +148,9 @@
                         <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i
                                 class="bi bi-toggles2"></i></div>
                         <h2 class="h4 fw-bolder">Inclusion</h2>
-                        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another
-                            sentence and probably just keep going until we run out of words.</p>
+                        <p>El desarrollo de espacios urbanos inclusivos busca atender la problemática de
+                            desigualdad en el acceso a recursos como el agua potable.
+                        </p>
                         <a class="text-decoration-none" href="#!">
                             Call to action
                             <i class="bi bi-arrow-right"></i>
@@ -165,8 +160,9 @@
                         <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i
                                 class="bi bi-building"></i></div>
                         <h2 class="h4 fw-bolder">Resilencia</h2>
-                        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another
-                            sentence and probably just keep going until we run out of words.</p>
+                        <p>Se buscan desarrollar ciudades que tengan la capacidad de mantener
+                            estabilidad a pesar de las adversidades que se presenten.
+                        </p>
                         <a class="text-decoration-none" href="#!">
                             Call to action
                             <i class="bi bi-arrow-right"></i>
@@ -193,7 +189,7 @@
                                 <div class="card-body p-5">
                                     <div class="small text-uppercase fw-bold text-muted">Esenarios de </div>
                                     <div class="mb-3">
-                                        <span class="display-4 fw-bold">Tendencia</span>
+                                        <span class="display-6 fw-bold">Tendencia</span>
                                         <p></p>
                                         <span class="text-muted"> IA, cognitive services, ML</span>
                                     </div>
@@ -239,7 +235,7 @@
                                         Dónde colocar
                                     </div>
                                     <div class="mb-3">
-                                        <span class="display-4 fw-bold">Nuevos<br> equipamientos</span>
+                                        <span class="display-6 fw-bold">Nuevos<br> equipamientos</span>
                                         <span class="text-muted"><br>Analisis inteligente con IAs</span>
                                     </div>
                                     <ul class="list-unstyled mb-4">
@@ -280,7 +276,7 @@
                                     <div class="small text-uppercase fw-bold text-muted">Identificar facilmente con el
                                     </div>
                                     <div class="mb-3">
-                                        <span class="display-4 fw-bold">Mapa general</span>
+                                        <span class="display-6 fw-bold">Mapa general</span>
                                         <span class="text-muted"><br>Layers y guia de uso</span>
                                     </div>
                                     <ul class="list-unstyled mb-4">
